fixes the amazing disappearing/reappearing advanced properties tab [829]